--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <title>Landing Page</title>
 </head>
 <body>
@@ -26,9 +29,7 @@
             <button>Sign up</button>
         </div>
         <div class="right-content">
-            <div class="placeholder">
-                this is a placeholder for an image
-            </div>
+            <img src="placeholder-img.jpg" alt="placeholder image">
         </div>
     </div>
     <div class="info">
