--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </div>
     <div class="info">
         <h2>Some random information.</h2>
-        <div class="cards">
+        <div class="card-container">
             <div class="card">
                 <div class="placeholder"></div>
                 <p>this is some subtext under an illustration or image</p>
